--- a/style.css
+++ b/style.css
@@ -1993,3 +1993,10 @@ body:not(.has-detail) #backHome {
   opacity: 1 !important;
   pointer-events: auto !important;
 }
+.entry-card * {
+  pointer-events: none;
+}
+
+.entry-card {
+  cursor: pointer;
+}
