--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+/* === BASIC RESET === */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
 
 
 
