--- a/style.css
+++ b/style.css
@@ -1931,3 +1931,20 @@ footer {
 .ms-table tr:nth-child(even) td {
   background: #fafafa;
 }
+.ms-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 14px;
+}
+
+.ms-table th,
+.ms-table td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+
+.ms-table th {
+  background: #f3f3f3;
+  font-weight: 600;
+}
