--- a/style.css
+++ b/style.css
@@ -2045,3 +2045,11 @@ footer .support-crypto code {
   font-size: 11px;
   padding: 6px;
 }
+.crypto-address {
+  cursor: pointer;
+  user-select: all;
+}
+
+.crypto-address:hover {
+  background: #eef6ff;
+}
